--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -1,10 +1,10 @@
 applications:
 - name: tracker-backlog
   path: ./applications/backlog-server/build/libs/backlog-server.jar
-  host: backlog-pal-INITIALS
+  host: backlog-pal-dj
   memory: 1G
   instances: 1
   env:
-    REGISTRATION_SERVER_ENDPOINT: http://FILL_ME_IN
+    REGISTRATION_SERVER_ENDPOINT: https://backlog-pal-dj.apps.pikes.pal.pivotal.io
   services:
   - tracker-backlog-database
