--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -5,6 +5,6 @@ applications:
   memory: 1G
   instances: 1
   env:
-    REGISTRATION_SERVER_ENDPOINT: https://backlog-pal-dj.apps.pikes.pal.pivotal.io
+    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-dj.apps.pikes.pal.pivotal.io
   services:
   - tracker-backlog-database
