--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -1,10 +1,10 @@
 applications:
 - name: tracker-allocations
   path: ./applications/allocations-server/build/libs/allocations-server.jar
-  host: allocations-pal-dj
+  host: allocations-pal-ml
   memory: 1G
   instances: 1
   env:
-    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-dj.apps.pikes.pal.pivotal.io
+    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-ml.apps.pikes.pal.pivotal.io
   services:
   - tracker-allocations-database
