--- a/manifest-registration.yml
+++ b/manifest-registration.yml
@@ -1,7 +1,7 @@
 applications:
 - name: tracker-registration
   path: ./applications/registration-server/build/libs/registration-server.jar
-  host: registration-pal-dj
+  host: registration-pal-ml
   memory: 1G
   instances: 1
   services:
