--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -1,10 +1,10 @@
 applications:
 - name: tracker-timesheets
   path: ./applications/timesheets-server/build/libs/timesheets-server.jar
-  host: timesheets-pal-dj
+  host: timesheets-pal-ml
   memory: 1G
   instances: 1
   env:
-    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-dj.apps.pikes.pal.pivotal.io
+    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-ml.apps.pikes.pal.pivotal.io
   services:
   - tracker-timesheets-database
